# ImageProcess_course

./: readme.md
00_Homework/冯波7220180157_控制工程2018习题三/Matlab_project/: DCT.m  fft.m  reference.txt
00_Homework/冯波7220180157_控制工程2018习题二/: 习题二.docx
00_Homework/冯波7220180157_控制工程2018习题二/ImgFusion/: imgfusion.cpp
01_ImageProcess/: readme.md
01_ImageProcess/00.OpenCE/: README.md
01_ImageProcess/01_LIME_Enhancement/test/: LIME.cpp
01_ImageProcess/02_Image_Denoising/: CMakeLists.txt  Image_Denoising.cpp  readme.md
01_ImageProcess/03_Image_restoration/01_Image-Inpainting/: CMakeLists.txt  Image_restoration.cpp  demo  mask  readme.md  test1  test1_
01_ImageProcess/04_Image_codec/: codec.cpp  readme.md
02_ImageAnalysis/: readme.md
02_ImageAnalysis/01_Image_segmentation/: CMakeLists.txt  demo  opencv_118.cpp  opencv_118.py  readme.md
02_ImageAnalysis/02_Image_segmentation/: CMakeLists.txt  demo  opencv_117.cpp  readme.md
02_ImageAnalysis/03_Image_segmentation/: CMakeLists.txt  demo  opencv_111.cpp  opencv_111.py  readme.md
02_ImageAnalysis/04_Image_segmentation/: CMakeLists.txt  demo  opencv_112.cpp  readme.md
02_ImageAnalysis/05_Image_segmentation/: readme.md
02_ImageAnalysis/06_FaceRecognition/FaceDetectionComparison/: CMakeLists.txt
02_ImageAnalysis/06_FaceRecognition/FaceDetectionComparison/run/: face_detection_dlib_hog  face_detection_dlib_mmod  run.sh
02_ImageAnalysis/06_FaceRecognition/FaceDetectionComparison/src/: face_detection_dlib_mmod.cpp  face_detection_opencv_haar.cpp  run-all.cpp
03_report/: DIP_冯波_7220180157_题1.docx
04_PPT/: 006 图像编码.ppt  课程复习1.ppt
(+20 files in other folders)
